# CTSMpy

./: Filter.py  LICENSE  Makefile  README.md  README.rst  model.py  pyproject.toml  requirements.txt  requirements_dev.txt  ruff.toml
.github/workflows/: codecheck.yml
src/ctsmpy/: __init__.py  ctsmpy.py  filter.py  model.py
src/ctsmpy/filters/: __init__.py  base_filter.py  ekf.py  kf.py
tests/: __init__.py  test_ctsmpy.py
