[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ctsmpy"
version = "0.0.1"
description = "Continuous Time State Space Modelling in Python"
readme = "README.md"
authors = [
  {name = "Peter Grønning", email = "s183922@student.dtu.dk"}
]
maintainers = [
  {name = "Peter Grønning", email = "s183922@student.dtu.dk"}
]

license = {text = "MIT license"}

requires-python = ">=3.8.10"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

